--- a/style.css
+++ b/style.css
@@ -40,19 +40,231 @@ a {
 	text-decoration: none;
 	color: var(--font_drk);
 }
+.container-fluid {
+	width: 80%;
+	margin: 0 auto;
+}
+.container {
+	width: 1500px;
+	min-width: 320px;
+	margin: 0 auto;
+	/* border: 1px solid red; */
+}
+
 /* NAV */
 
+nav {
+	position: fixed;
+	width: 100%;
+	padding: 10px 10%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background: var(--black);
+}
+nav a {
+	color: white;
+	letter-spacing: 1.5px;
+}
+.burger {
+	display: none;
+	align-items: center;
+	justify-content: space-between;
+	flex-direction: column;
+	height: 20px;
+	width: 25px;
+	/* border: 1px solid red; */
+}
+.burger span {
+	width: 100%;
+	height: 2px;
+	background: white;
+	display: block;
+}
+.drop_down .link {
+	margin: 0 10px;
+}
+.btn {
+	padding: 0.5rem 1.3rem;
+	border: 1px solid white;
+	border-radius: 5px;
+	color: white;
+	font-size: 1.2rem;
+	display: inline-block;
+	transition: var(--transition-in);
+}
+.btn:hover {
+	background-color: white;
+	color: var(--font_drk);
+	transition: var(--transition-out);
+}
+/* HEADER */
+
+header {
+	background: linear-gradient(rgba(0, 0, 0, 0.37), rgba(0, 0, 0, 0.281)),
+		url(img/bg2.jpg);
+	background-position: center;
+	background-size: cover;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+header hgroup {
+	color: white;
+	width: 50%;
+	min-width: 320px;
+}
+header hgroup h3 {
+	font-size: 1.4rem;
+	position: relative;
+	display: inline-block;
+	color: white;
+}
+header hgroup h3::after {
+	content: "";
+	width: 50%;
+	height: 2px;
+	background-color: white;
+	display: block;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 110%;
+}
+header hgroup h1 {
+	color: white;
+	margin: 0.8rem 0;
+	font-size: 2.6rem;
+	line-height: 1;
+}
+
+header hgroup p {
+	margin: 20px 0;
+}
+
+/* SERVICES */
+
+section {
+	padding: 80px 0;
+}
+
+.service-header {
+	text-align: center;
+	margin: 40px 0;
+}
+.accents {
+	color: red;
+	margin: 0.5rem 0;
+	display: inline-block;
+	position: relative;
+	/* border: 1px solid red; */
+}
+.accents::after,
+.accents::before {
+	position: absolute;
+	content: "";
+	display: block;
+	width: 50%;
+	height: 2px;
+	background-color: red;
+	top: 50%;
+}
+.accents::after {
+	transform: translateY(-50%);
+	left: 110%;
+}
+.accents::before {
+	right: 110%;
+	transform: translateY(-50%);
+}
+
+.item {
+	position: relative;
+}
+.item img {
+	width: 100%;
+	display: block;
+}
+.hover-pop {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.11);
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	color: white;
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-start;
+	flex-direction: column;
+	padding: 20px;
+}
+.hover-pop h3 {
+	font-size: 1.6rem;
+	color: white;
+	margin-bottom: 30px;
+}
+.hover-pop p {
+	font-size: 1.2rem;
+	color: white;
+	width: 80%;
+}
 /* RESPONSIVE */
 @media (max-width: 1500px) {
+	.container {
+		width: 1200px;
+	}
 }
 
 @media (max-width: 1200px) {
+	.container {
+		width: calc(1200px * 0.8);
+	}
 }
 
 @media (max-width: 960px) {
+	.container {
+		width: calc(960px * 0.8);
+	}
 }
 
 @media (max-width: 768px) {
+	.container {
+		width: calc(768px * 0.8);
+	}
+	nav {
+		position: relative;
+	}
+	.burger {
+		display: flex;
+		cursor: pointer;
+	}
+	.drop_down {
+		position: absolute;
+		width: 100%;
+		left: 0;
+		right: 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		background-color: black;
+		top: 100%;
+		max-height: 0;
+		min-height: 0;
+		transition: var(--transition-out);
+		overflow: hidden;
+	}
+	.drop_down .link {
+		margin: 5px 0;
+	}
+	.drop_down.show {
+		max-height: 220px;
+		transition: var(--transition-in);
+	}
 }
 
 @media (max-width: 618px) {
